--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,21 +99,21 @@ jobs:
         # Apply semantic version (can include pre-release tags)
         sed -i "s/<Version>.*<\/Version>/<Version>${{ env.VERSION }}<\/Version>/" src/cycod/cycod.csproj
         sed -i "s/<Version>.*<\/Version>/<Version>${{ env.VERSION }}<\/Version>/" src/cycodt/cycodt.csproj
-        sed -i "s/<Version>.*<\/Version>/<Version>${{ env.VERSION }}<\/Version>/" src/cycodmd/mdx.csproj
+        sed -i "s/<Version>.*<\/Version>/<Version>${{ env.VERSION }}<\/Version>/" src/cycodmd/cycodmd.csproj
         
         # Apply informational version (can include pre-release tags)
         sed -i "s/<InformationalVersion>.*<\/InformationalVersion>/<InformationalVersion>${{ env.VERSION }}<\/InformationalVersion>/" src/cycod/cycod.csproj
         sed -i "s/<InformationalVersion>.*<\/InformationalVersion>/<InformationalVersion>${{ env.VERSION }}<\/InformationalVersion>/" src/cycodt/cycodt.csproj
-        sed -i "s/<InformationalVersion>.*<\/InformationalVersion>/<InformationalVersion>${{ env.VERSION }}<\/InformationalVersion>/" src/cycodmd/mdx.csproj
+        sed -i "s/<InformationalVersion>.*<\/InformationalVersion>/<InformationalVersion>${{ env.VERSION }}<\/InformationalVersion>/" src/cycodmd/cycodmd.csproj
         
         # Apply numeric versions for assembly and file versions (must be numeric only)
         sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${{ env.NUMERIC_VERSION }}<\/AssemblyVersion>/" src/cycod/cycod.csproj
         sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${{ env.NUMERIC_VERSION }}<\/AssemblyVersion>/" src/cycodt/cycodt.csproj
-        sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${{ env.NUMERIC_VERSION }}<\/AssemblyVersion>/" src/cycodmd/mdx.csproj
+        sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>${{ env.NUMERIC_VERSION }}<\/AssemblyVersion>/" src/cycodmd/cycodmd.csproj
         
         sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${{ env.NUMERIC_VERSION }}<\/FileVersion>/" src/cycod/cycod.csproj
         sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${{ env.NUMERIC_VERSION }}<\/FileVersion>/" src/cycodt/cycodt.csproj
-        sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${{ env.NUMERIC_VERSION }}<\/FileVersion>/" src/cycodmd/mdx.csproj
+        sed -i "s/<FileVersion>.*<\/FileVersion>/<FileVersion>${{ env.NUMERIC_VERSION }}<\/FileVersion>/" src/cycodmd/cycodmd.csproj
     
     - name: Restore dependencies
       run: dotnet restore
@@ -160,15 +160,15 @@ jobs:
         # Then pack the NuGet package (will include all published runtimes)
         dotnet pack src/cycodt/cycodt.csproj --configuration Release --no-build -o nuget-packages
         
-    - name: Pack mdx
+    - name: Pack cycodmd
       run: |
         # Publish for multiple platforms first
-        dotnet publish src/cycodmd/mdx.csproj -c Release -r win-x64
-        dotnet publish src/cycodmd/mdx.csproj -c Release -r linux-x64
-        dotnet publish src/cycodmd/mdx.csproj -c Release -r osx-x64
+        dotnet publish src/cycodmd/cycodmd.csproj -c Release -r win-x64
+        dotnet publish src/cycodmd/cycodmd.csproj -c Release -r linux-x64
+        dotnet publish src/cycodmd/cycodmd.csproj -c Release -r osx-x64
         
         # Then pack the NuGet package (will include all published runtimes)
-        dotnet pack src/cycodmd/mdx.csproj --configuration Release --no-build -o nuget-packages
+        dotnet pack src/cycodmd/cycodmd.csproj --configuration Release --no-build -o nuget-packages
     
     - name: Generate package checksums
       run: |
@@ -181,7 +181,7 @@ jobs:
     - name: Upload NuGet packages and checksums
       uses: actions/upload-artifact@v4
       with:
-        name: cycod-cycodt-mdx-nuget-packages
+        name: cycod-cycodt-cycodmd-nuget-packages
         path: nuget-packages/*
     
     - name: Publish to NuGet
