--- a/src/cycodt/cycodt.csproj
+++ b/src/cycodt/cycodt.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
+    <AssemblyName>cycodt</AssemblyName>
     <OutputType>Exe</OutputType>
     <Version>1.0.0</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
