--- a/tests/cycodt-yaml/run-command-script-bash.yaml
+++ b/tests/cycodt-yaml/run-command-script-bash.yaml
@@ -1,16 +1,18 @@
-﻿
-- name: process
+﻿class: run/command/script/bash
+tests:
+
+- name: running simple process
   command: cycod version
 
-- name: cycod hi
+- name: running simple process w/ AI expectation
   command: cycod --input Hi --use-anthropic
   expect: You should see a greeting from user, and then the assistant will respond with something (doesn't matter what it responds with, as long as it responds with something).
   optional: needsAI
 
-- name: cmd
+- name: running simple script w/ regex expectation
   script: echo hello
   expect-regex: hello
 
-- name: bash
+- name: running bash script w/ regex expectation
   bash: pwd
   expect-regex: tests
