enhance shell script handling with explicit shell types and improved argument passing

--- a/tests/cycodt-yaml/run-bash-script-env-tests.yaml
+++ b/tests/cycodt-yaml/run-bash-script-env-tests.yaml
@@ -2,6 +2,8 @@ env:
   ENV1: VAL1
   ENV2: VAL2
 
+class: bash-script-env
+tag: cycodt
 tests:
 - name: Simple environment variable
   bash: 'echo "TESTVAR=$TESTVAR"'
